bynkc/tests/fixtures/positive/07_refined_string_maxlength/input.karn
commons demo {
  type Tweet = String where MaxLength(280)
}
