bynkc/tests/fixtures/negative/10_duplicate_type/input.karn
commons demo {
  type T = Int
  type T = String
}
